--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
   <h1>Incremental Dungeon Crawler RPG</h1>
-  <div id="room-selection"></div>
-  <div id="room-content" style="display:none;"></div>
+
+  <!-- Grid of rooms -->
+  <div id="map"></div>
+
+  <!-- When you enter a room, this shows the details -->
+  <div id="room-content" class="hidden"></div>
+
   <script src="main.js"></script>
 </body>
 </html>
