--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Incremental Dungeon Crawler RPG</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <h1>Incremental Dungeon Crawler RPG</h1>
 
-  <!-- Grid of rooms -->
+  <!-- 3×3+ grid will render here -->
   <div id="map"></div>
 
-  <!-- When you enter a room, this shows the details -->
+  <!-- Room/combat details appear here -->
   <div id="room-content" class="hidden"></div>
 
   <script src="main.js"></script>
