--- a/index.html
+++ b/index.html
@@ -7,13 +7,35 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <h1>Incremental Dungeon Crawler RPG</h1>
 
-  <!-- 3×3+ grid will render here -->
-  <div id="map"></div>
+  <!-- ─── MAIN MENU ─── -->
+  <div id="main-menu">
+    <h1>Incremental Dungeon Crawler RPG</h1>
+    <button id="start-btn">Start Game</button>
+  </div>
 
-  <!-- Room/combat details appear here -->
+  <!-- ─── HUD BUTTONS ─── -->
+  <div id="hud" class="hidden">
+    <button id="map-btn">View Map</button>
+  </div>
+
+  <!-- ─── DUNGEON GRID ─── -->
+  <div id="map" class="hidden"></div>
+
+  <!-- ─── SEARCH FOR SECRET ROOMS ─── -->
+  <button id="search-btn" class="hidden">Search for Secret Passages</button>
+
+  <!-- ─── ROOM / COMBAT PANEL ─── -->
   <div id="room-content" class="hidden"></div>
+
+  <!-- ─── EXPLORED MAP OVERLAY ─── -->
+  <div id="explored-map" class="overlay hidden">
+    <div class="overlay-content">
+      <h2>Explored Rooms</h2>
+      <div id="overlay-grid"></div>
+      <button id="close-map-btn">Close Map</button>
+    </div>
+  </div>
 
   <script src="main.js"></script>
 </body>
