--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
     <button id="start-btn">Start Game</button>
   </div>
 
-  <!-- DUNGEON GRID -->
+  <!-- DUNGEON GRID (initially hidden) -->
   <div id="map" class="hidden"></div>
 
-  <!-- SEARCH FOR SECRET ROOMS -->
+  <!-- SEARCH FOR SECRET ROOMS (unused for now) -->
   <button id="search-btn" class="hidden">Search for Secret Passages</button>
 
   <!-- ROOM CONTENT PANEL -->
   <div id="room-content" class="hidden"></div>
 
+  <!-- Load your JS last! -->
   <script src="main.js"></script>
 </body>
 </html>
